Added nonredundent functionality

--- a/templates/module.html
+++ b/templates/module.html
@@ -155,7 +155,8 @@
 <div class="card">
     <div class="emoji">🎯</div>
     <h1>Choose Your Module</h1>
-    <p class="subtitle">Select the course module you want to register for</p>
+    <p class="subtitle">Select the course modules you want to register for</p>
+    <h4 class="subtitle"> You can select multiple modules</h4>
 
     <form method="POST" id="moduleForm">
         <input type="hidden" name="module" id="moduleInput" value="">
