--- a/templates/index_email.html
+++ b/templates/index_email.html
@@ -313,7 +313,7 @@
 <body>
 <div class="container">
     <div class="logo">🎓</div>
-    <h1>Welcome to Goethe-Zentrum!</h1>
+    <h1>Welcome to Goethe-Zentrum Exam Booking By DEUTSCH ZEIT!</h1>
     <p class="subtitle">Please complete your registration details</p>
 
     <form id="registrationForm">
